tests/invalid/mac-missing.pskcxml
<?xml version="1.0" encoding="UTF-8"?>

<!--
  Based on figure 6 from RFC6030 but with a missing encryption element
  but MAC present.
-->

<KeyContainer Version="1.0"
  xmlns="urn:ietf:params:xml:ns:keyprov:pskc"
  xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
  xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
  <MACMethod Algorithm="http://www.w3.org/2000/09/xmldsig#hmac-sha1"/>
  <KeyPackage>
    <DeviceInfo>
      <Manufacturer>Manufacturer</Manufacturer>
      <SerialNo>987654321</SerialNo>
    </DeviceInfo>
    <CryptoModuleInfo>
      <Id>CM_ID_001</Id>
    </CryptoModuleInfo>
    <Key Id="12345678" Algorithm="urn:ietf:params:xml:ns:keyprov:pskc:hotp">
      <Issuer>Issuer</Issuer>
      <AlgorithmParameters>
        <ResponseFormat Length="8" Encoding="DECIMAL"/>
      </AlgorithmParameters>
      <Data>
        <Secret>
          <EncryptedValue>
            <xenc:EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
            <xenc:CipherData>
              <xenc:CipherValue>AAECAwQFBgcICQoLDA0OD+cIHItlB3Wra1DUpxVvOx2lef1VmNPCMl8jwZqIUqGz</xenc:CipherValue>
            </xenc:CipherData>
          </EncryptedValue>
          <ValueMAC>Su+NvtQfmvfJzF6bmQiJqoLRExc=</ValueMAC>
        </Secret>
        <Counter>
          <PlainValue>0</PlainValue>
        </Counter>
      </Data>
    </Key>
  </KeyPackage>
</KeyContainer>
